@@ -4,6 +4,7 @@
 	<Height>400</Height>
 	<Extents>-1,-4,10,10</Extents>
 	<Projection>+init=epsg:4326</Projection>
+	<BackgroundColor>255,255,255,255</BackgroundColor>
 	<Layers>
 		<Layer>
 			<Theme>Unique</Theme>
@@ -71,7 +72,39 @@
 					<PointSize>5</PointSize>
 					<LabelPosition>Center</LabelPosition>
 					<UniqueThemeValue>C</UniqueThemeValue>
-				</Style>	
+				</Style>
+				<Style>
+					<Id>45angleStyle</Id>
+					<ShowLabels>true</ShowLabels>
+					<PointSize>5</PointSize>
+					<LabelAngle>45</LabelAngle>
+					<UniqueThemeValue>45</UniqueThemeValue>
+					<LabelPosition>BottomRight</LabelPosition>
+				</Style>
+				<Style>
+					<Id>Negative45angleStyle</Id>
+					<ShowLabels>true</ShowLabels>
+					<PointSize>5</PointSize>
+					<LabelAngle>-45</LabelAngle>
+					<UniqueThemeValue>-45</UniqueThemeValue>
+					<LabelPosition>TopRight</LabelPosition>
+				</Style>
+				<Style>
+					<Id>NBL45angleStyle</Id>
+					<ShowLabels>true</ShowLabels>
+					<PointSize>5</PointSize>
+					<LabelAngle>-45</LabelAngle>
+					<UniqueThemeValue>-45BL</UniqueThemeValue>
+					<LabelPosition>BottomLeft</LabelPosition>
+				</Style>
+				<Style>
+					<Id>TL45angleStyle</Id>
+					<ShowLabels>true</ShowLabels>
+					<PointSize>5</PointSize>
+					<LabelAngle>45</LabelAngle>
+					<UniqueThemeValue>45BL</UniqueThemeValue>
+					<LabelPosition>TopLeft</LabelPosition>
+				</Style>						
 			</Styles>
 			<Projection></Projection>
 			<Id>PointLayer</Id>
@@ -79,59 +112,83 @@
 				<SimpleFeatureSource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
 					<Features>
 						<Feature xsi:type="Point">
-							<X>4</X>
+							<X>2</X>
 							<Y>7</Y>
 							<LabelFieldValue>Right</LabelFieldValue>
 							<ThemeFieldValue>R</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>4</X>
+							<X>2</X>
 							<Y>6</Y>
 							<LabelFieldValue>Bottom Right</LabelFieldValue>
 							<ThemeFieldValue>BR</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>3</X>
+							<X>1</X>
 							<Y>6</Y>
 							<LabelFieldValue>Bottom</LabelFieldValue>
 							<ThemeFieldValue>B</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>2</X>
+							<X>0</X>
 							<Y>6</Y>
 							<LabelFieldValue>Bottom Left</LabelFieldValue>
 							<ThemeFieldValue>BL</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>2</X>
+							<X>0</X>
 							<Y>7</Y>
 							<LabelFieldValue>Left</LabelFieldValue>
 							<ThemeFieldValue>L</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>2</X>
+							<X>0</X>
 							<Y>8</Y>
 							<LabelFieldValue>Top Left</LabelFieldValue>
 							<ThemeFieldValue>TL</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>3</X>
+							<X>1</X>
 							<Y>8</Y>
 							<LabelFieldValue>Top</LabelFieldValue>
 							<ThemeFieldValue>T</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>4</X>
+							<X>2</X>
 							<Y>8</Y>
 							<LabelFieldValue>Top Right</LabelFieldValue>
 							<ThemeFieldValue>TR</ThemeFieldValue>
 						</Feature>
 						<Feature xsi:type="Point">
-							<X>3</X>
+							<X>1</X>
 							<Y>7</Y>
 							<LabelFieldValue>Center</LabelFieldValue>
 							<ThemeFieldValue>C</ThemeFieldValue>
 						</Feature>
+						<Feature xsi:type="Point">
+							<X>4</X>
+							<Y>7</Y>
+							<LabelFieldValue>45 BR</LabelFieldValue>
+							<ThemeFieldValue>45</ThemeFieldValue>
+						</Feature>
+						<Feature xsi:type="Point">
+							<X>4</X>
+							<Y>8</Y>
+							<LabelFieldValue>-45 TR</LabelFieldValue>
+							<ThemeFieldValue>-45</ThemeFieldValue>
+						</Feature>
+						<Feature xsi:type="Point">
+							<X>6</X>
+							<Y>7</Y>
+							<LabelFieldValue>-45 BL</LabelFieldValue>
+							<ThemeFieldValue>-45BL</ThemeFieldValue>
+						</Feature>
+						<Feature xsi:type="Point">
+							<X>6</X>
+							<Y>8</Y>
+							<LabelFieldValue>45 TL</LabelFieldValue>
+							<ThemeFieldValue>45BL</ThemeFieldValue>
+						</Feature>							
 					</Features>
 					<SimpleFeatureType>Point</SimpleFeatureType>
 				</SimpleFeatureSource>
@@ -268,23 +325,23 @@
 								<Line>
 									<Points>
 										<Point>
-											<X>7</X>
+											<X>8</X>
 											<Y>2</Y>
 										</Point>
 										<Point>
-											<X>9</X>
+											<X>10</X>
 											<Y>4</Y>
 										</Point>
 										<Point>
-											<X>7</X>
+											<X>8</X>
 											<Y>6</Y>
 										</Point>
 										<Point>
-											<X>9</X>
+											<X>10</X>
 											<Y>8</Y>
 										</Point>
 										<Point>
-											<X>7</X>
+											<X>8</X>
 											<Y>10</Y>
 										</Point>
 									</Points>
